# CNanoLog

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  portfile.cmake  test_text_mode.c  usage  vcpkg.json
benchmark/: CMakeLists.txt  DATA_TYPES_AND_LARGE_SCALE_PLAN.md  IMPLEMENTATION_STATUS.md  README.md  TESTING_PLAN.md
benchmark/common/: benchmark_adapter.h  stats.h  timing.h
benchmark/libraries/: cnanolog_adapter.c
benchmark/scenarios/: large_scale.c  single_threaded.c
benchmark/scripts/: run_all.sh  setup_env.sh
cmake/: CNanoLogConfig.cmake.in
docs/: API.md  BENCHMARKING.md  BINARY_FORMAT_SPEC.md  BUILD.md  CONAN.md  CONFIGURATION.md  OPTIMIZATION_GUIDE.md  PERFORMANCE.md  SINGLE_HEADER.md  USAGE.md  VCPKG.md
examples/: CMakeLists.txt  README.md  basic_usage.c  error_handling.c  high_performance.c  multithreaded.c  production_server.c  realtime_logging.c  rotation_example.c  simple.c  single_header_example.c  statistics_monitoring.c
include/: cnanolog.h  cnanolog_format.h  cnanolog_types.h
scripts/: optimize_for_speed.sh  run_benchmarks.sh  update_version.py  update_version.sh
src/: arg_packing.h  binary_writer.c  binary_writer.h  cnanolog.c  cnanolog_binary.c  compressor.c  compressor.h  cycles.h  log_registry.c  log_registry.h  packer.c  packer.h  platform.c  platform.h  ring_buffer.c  ring_buffer.h  staging_buffer.c  staging_buffer.h  text_formatter.c  text_formatter.h
test_package/: CMakeLists.txt  conanfile.py  test_cnanolog.c
tests/: CMakeLists.txt  benchmark_comprehensive.c  benchmark_latency.c  debug_count.c  simple_test.c  test_arg_types.c  test_binary_integration.c  test_binary_writer.c  test_buffer_overflow.c  test_burst_scenario.c  test_cacheline_alignment.c  test_compression.c  test_cpp_integration.cpp  test_e2e.c  test_format.c  test_multithreaded_stress.c  test_per_log_pattern.c  test_registry.c  test_simple.c  test_single_header.c  test_statistics.c
tools/: CMakeLists.txt  decompressor.c  dump_entries.c  generate_single_header.sh
